--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -4,7 +4,7 @@
   <label class="col-sm-2 col-form-label">Filter By:</label>
   <div class="col-sm-10">
     <input [(ngModel)]="filter" class="form-control">
-</div>
+  </div>
 </div>
 
 <table class="table table-striped">
@@ -22,7 +22,7 @@
 
   <tbody>
     <tr *ngFor="let course of filteredCourses">
-      <td><img [src]="course.imageUrl" width="40" height="40"></td>
+      <td class="td-img"><img [src]="course.imageUrl" width="40" height="40"></td>
       <td>{{ course.name }}</td>
       <td>{{ course.price }}</td>
       <td>{{ course.code | lowercase | replace: '-': ' '}}</td>
@@ -32,7 +32,10 @@
 
         </app-star>
       </td>
-      <td></td>
+      <td class="td-btn">
+        <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">Edit</a>
+        <button (click)="deleteById(course.id)" class="btn btn-danger">Delete</button>
+      </td>
     </tr>
   </tbody>
 </table>
